<resources>
    <string name="app_name">SaneApp</string>

    <string name="action_settings">Settings</string>
    <string name="report_title_hint">Enter a name for your report.</string>
    <string name="report_title_label">Title</string>
    <string name="report_details_label">Details</string>
    <string name="report_reported_label">Reported</string>

    <string name="undefined">Undefined</string>
    <string name="click_the_button">Click the \'Red\' button</string>

    <string name="responses_title">Responses</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="join">Join</string>
    <string name="QnA">QnA</string>
    <string name="menu">Menu</string>
    <string name="report">Report</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="login_progress_signing_in">login_progress_signing_in</string>
    <string name="username">user_name</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="facebook_login">fblogin</string>
    <string name="signup">signup</string>
    <string name="email">email</string>
    <string name="signup_progress_signing_up">signup_progress_signing_up</string>
    <string name="password_text">PIN Number</string>
    <string name="signin_text">Login</string>
    <string name="username_text">username</string>
    <string name="title_activity_maps">Map</string>
</resources>
